change some styling

--- a/src/app/page/blog/pages/single-page/blog-page.component.scss
+++ b/src/app/page/blog/pages/single-page/blog-page.component.scss
@@ -8,3 +8,8 @@
     box-shadow: -5px 0px 0px 0px var(--cs-color-text);
     text-align: justify;
 }
+
+.blog__name{
+    font-family: var(--cs-main-font);
+    box-shadow: inset   0 -0.75rem #c8e6ff;
+}
