--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark border-bottom  navbar__content">
     <div class="container-fluid">
-        <a class="navbar-brand" routerLink="/"><img src="{{logoUrl}}" alt="logo" width="40" height="40"
-                srcset=""></a>
+        <a class="navbar-brand" routerLink="/"><img src="{{logoUrl}}" alt="logo" width="40" height="40" srcset=""></a>
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -17,14 +16,14 @@
         </div>
 
         <div class="navbar-collapse collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto text-center">
                 <li class="nav-item">
                     <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
                         [routerLink]="'/'">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
-                        [routerLink]="'/product'">Product</a>
+                        [routerLink]="'/learn/learn-chart'">Learning</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
