--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -3,8 +3,8 @@
     <nz-sider nzCollapsible nzWidth="200px" [(nzCollapsed)]="isCollapsed" [nzCollapsedWidth]="80"
       *ngIf="!(isHandset$ | async)" nzTheme="dark">
       <div class="logo text-center cs__pointer" [routerLink]="['/']" routerLinkActive="router-link-active">
-        <span class="cs__text-1">
-          FXeater
+        <span class="logo__text">
+          FxEater
         </span>
       </div>
       <ul nz-menu nzTheme="dark" nzMode="inline" class="sticky-lg-top">
