--- a/src/app/page/blog/pages/single-page/blog-page.component.html
+++ b/src/app/page/blog/pages/single-page/blog-page.component.html
@@ -2,11 +2,13 @@
     <ng-container *ngIf="blogData">
         <div class="row border-bottom p-3">
             <div class="col-lg-9">
-                <h1 class="fs-2 blog__name">{{blogData.name}}</h1>
-                <span class="fs-6 cs__text-2">by <strong>{{blogData.author}}</strong>, at {{blogData.created_at |
+                <h1 nz-typography class="fs-2 blog__name">{{blogData.name}}</h1>
+                <span class="fs-6 cs__text-2 ms-auto">by
+                    <nz-avatar nzIcon="user" nzSize="small" nzSrc="{{blogData.author_info.avatar}}"></nz-avatar>
+                    <strong class="ms-1">{{blogData.author}}</strong>, at {{blogData.created_at |
                     date:'short'}}
                 </span>
-                <h3 class="blog__description mt-2 fs-6 cs__text-2">{{blogData.description}}</h3>
+                <h3 nz-typography class="blog__description mt-2 fs-6 cs__text-2">{{blogData.description}}</h3>
             </div>
             <div class="col-lg-3" *ngIf="userInfo$ | async">
                 <ng-container *ngIf="userData && userData.base_user?.id == blogData.author_info.author_id">
