--- a/src/app/page/blog/pages/view-blog/view-blog.component.css
+++ b/src/app/page/blog/pages/view-blog/view-blog.component.css
@@ -19,3 +19,9 @@
 :host ::ng-deep .bg-cancel {
     background-color: var(--indigo-400);
 }
+
+.section__filter {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background: transparent;
+}
