--- a/src/app/page/home/pages/home.page.html
+++ b/src/app/page/home/pages/home.page.html
@@ -11,17 +11,21 @@
         <div class="col-lg-4 col-md-5 d-md-block d-none">
             <ng-container *ngTemplateOutlet="homeCrypto"></ng-container>
         </div>
+        <div class="col-lg-2 col-md-6 d-lg-block d-none ms-auto">
+            <img nz-image [responsive]="true" nzSrc="assets/public/grow_in_hand.jpg" alt="grow_in_hand">
+            <p class="text-center">Future in your hand</p>
+        </div>
     </div>
 </div>
 
 <ng-container *ngIf="(pageData$|async)">
     <div class="container-fluid pt-1">
         <div class="row">
-            <div class="col-lg-6" *ngIf="currentPageData.blogData.length > 0">
+            <div class="col-lg-5" *ngIf="currentPageData.blogData.length > 0">
                 <nz-divider nzText="New post" nzOrientation="left"></nz-divider>
                 <app-home-blog [blogsData]="currentPageData.blogData"></app-home-blog>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-5">
                 <nz-divider nzText="Series" nzOrientation="left"></nz-divider>
                 <div class="row">
                     <div class="col-12 mt-3" *ngFor="let item of currentPageData.seriesData">
@@ -46,14 +50,22 @@
                 </div>
                 <!-- <app-home-blog [blogsData]="pageData[1]"></app-home-blog> -->
             </div>
+            <div class="col-lg-2 col-md-6 d-lg-block d-none ms-auto">
+                <img nz-image [responsive]="true" nzSrc="assets/public/calculate_head.jpg" alt="calculate_head">
+                <p class="text-center">Train your mind</p>
+            </div>
         </div>
         <div class="row">
-            <nz-divider nzText="Learn Chart Patterns" nzOrientation="left"></nz-divider>
-            <ng-container *ngFor="let item of currentPageData.patternData">
-                <div class="col-lg-4 col-md-6 col-12 mt-3">
-                    <app-chart-pattern-card [item]="item"></app-chart-pattern-card>
+            <div class="col-lg-10 col-12">
+                <div class="row">
+                    <nz-divider nzText="Learn Chart Patterns" nzOrientation="left"></nz-divider>
+                    <ng-container *ngFor="let item of currentPageData.patternData">
+                        <div class="col-lg-3 col-md-6 col-12 mt-3">
+                            <app-chart-pattern-card [item]="item"></app-chart-pattern-card>
+                        </div>
+                    </ng-container>
                 </div>
-            </ng-container>
+            </div>
         </div>
     </div>
 </ng-container>
