--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -77,7 +77,9 @@
           <ng-content></ng-content>
         </div>
       </nz-content>
-      <nz-footer>StromIT ©2023 Implement By Angular</nz-footer>
+      <nz-footer>
+        <app-footer></app-footer>
+      </nz-footer>
     </nz-layout>
   </nz-layout>
 </ng-container>
