change SEO, update font

--- a/src/app/page/blog/pages/single-page/blog-page.component.scss
+++ b/src/app/page/blog/pages/single-page/blog-page.component.scss
@@ -10,6 +10,6 @@
 }
 
 .blog__name{
-    font-family: var(--cs-main-font);
+    font-family: var(--cs-header-font);
     box-shadow: inset   0 -0.75rem #c8e6ff;
 }
