--- a/src/app/page/blog/pages/single-page/blog-page.component.html
+++ b/src/app/page/blog/pages/single-page/blog-page.component.html
@@ -8,7 +8,7 @@
                     <strong class="ms-1">{{blogData.author}}</strong>, at {{blogData.created_at |
                     date:'short'}}
                 </span>
-                <h3 nz-typography class="blog__description mt-2 fs-6 cs__text-2">{{blogData.description}}</h3>
+                <h3 nz-typography class="blog__description mt-2 fs-6">{{blogData.description}}</h3>
             </div>
             <div class="col-lg-3" *ngIf="userInfo$ | async">
                 <ng-container *ngIf="userData && userData.base_user?.id == blogData.author_info.author_id">
