add search to gui

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -16,7 +16,7 @@
           <span nz-icon nzType="check" nzTheme="outline"></span>
           <span>Daily News</span>
         </li>
-        <li nz-menu-item [routerLink]="['/search']" [nzDisabled]="true">
+        <li nz-menu-item [routerLink]="['/search']" [nzDisabled]="false">
           <span nz-icon nzType="search" nzTheme="outline"></span>
           <span>Search</span>
         </li>
