--- a/src/app/page/search/pages/search-index/search-index.component.scss
+++ b/src/app/page/search/pages/search-index/search-index.component.scss
@@ -2,3 +2,8 @@
 :host ::ng-deep .ant-list-item-meta-description {
     padding-right: 1rem;
 }
+
+.search__img{
+    height: 120px;
+    width: 120px;
+}
