--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -13,7 +13,7 @@
             <div class="fs-6" *ngIf="header.subtitle">{{header.subtitle}}</div>
         </div>
 
-        <div class="col-xl-5 col-md-7 ms-auto col-12 d-flex justify-items-end flex-row">
+        <div class="col-xl-5 col-md-7 ms-auto col-12 d-flex justify-items-end flex-row mt-2">
             <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
                 <input type="text" nz-input placeholder="name, author, type,..." [(ngModel)]="searchKW"
                     (keydown.enter)="search()" />
