--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -1,39 +1,30 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-dark border-bottom  navbar__content">
-    <div class="container-fluid">
-        <a class="navbar-brand" routerLink="/"><img src="{{logoUrl}}" alt="logo" width="40" height="40" srcset=""></a>
-        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="input-group mt-2 d-none">
-            <span class="border-secondary input-group-text bg-secondary text-white"><i
-                    class="fa-solid fa-magnifying-glass"></i></span>
-            <input type="text" class="form-control border-secondary" style="color:#7a7a7a"
-                placeholder="name, author, category,...">
-            <button class="btn btn-secondary text-white">Search</button>
-        </div>
-
-        <div class="navbar-collapse collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto text-center">
-                <li class="nav-item">
-                    <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
-                        [routerLink]="'/'">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
-                        [routerLink]="'/learn/learn-chart'">Learning</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
-                        [routerLink]="'/blog/all'">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
-                        routerLink="/about">About</a>
-                </li>
-            </ul>
-        </div>
+<div class="navbar navbar-light bg-light navbar-expand-md px-3">
+    <a routerLink="/" class="navbar-brand">
+        <img src="{{logoUrl}}" alt="" width="40px" height="40px" ezimgfmt="rs rscb1 src ng ngcb1" loading="eager"
+            srcset="" sizes="" importance="high" fetchpriority="high">
+    </a>
+    <div class="w-50">
+        <nz-input-group [nzSuffix]="suffixIconSearch">
+            <input type="text" nz-input placeholder="search something..." [(ngModel)]="target_kw" />
+        </nz-input-group>
+        <ng-template #suffixIconSearch>
+            <nz-divider nzType="vertical"></nz-divider>
+            <span nz-icon nzType="search" (click)="search()"></span>
+        </ng-template>
     </div>
-</nav>
+
+    <button class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false">
+        <span nz-icon nzType="menu" nzTheme="outline"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="menu">
+        <nz-divider></nz-divider>
+        <ul class="navbar-nav ms-auto" style="list-style:none">
+            <ng-container *ngFor="let item of navBarItem">
+                <li class="nav-item text-center fs-6">
+                    <a [routerLink]="[item.url]" routerLinkActive="router-link-active"
+                        class="nav-link">{{item.text}}</a>
+                </li>
+            </ng-container>
+        </ul>
+    </div>
+</div>
