--- a/src/app/layout/components/navbar/navbar.component.scss
+++ b/src/app/layout/components/navbar/navbar.component.scss
@@ -1,51 +1,3 @@
-a {
-  font-size:14px;
-  font-weight:700;
-  color: var(--cs-color-secondary) !important;
-}
-
-.superNav {
-  font-size:13px;
-}
-
-.form-control {
-  outline:none !important;
-  box-shadow: none !important;
-}
-
-.navbar-toggler-icon{
-  color: var(--cs-color-secondary) !important;
-}
-
-@media screen and (max-width:540px){
-  .centerOnMobile {
-    text-align:center
-  }
-}
-
-.active {
-  color: white !important;
-  text-decoration: underline;
-}
-
-.navbar__content{
-  backdrop-filter: blur(10px);
-  background: var(--cs-color-text);
-  display: block;
-  // background-color: hsla(0, 0%, 95.3%, 0.4);
-}
-
-.header__item{
-  cursor: pointer;
-}
-
-// .header__item:hover{
-//   animation: hover_header 0.3s ease-in 0.1s forwards;
-// }
-
-@keyframes hover_header {
-  100%
-    {
-      box-shadow: 0px 5px var(--cs-color-secondary);
-    }
+.router-link-active{
+    text-decoration: underline;
 }
