--- a/src/app/page/blog/pages/single-page/blog-page.component.html
+++ b/src/app/page/blog/pages/single-page/blog-page.component.html
@@ -1,8 +1,14 @@
 <div class="container px-3" *ngIf="route$ | async">
     <ng-container *ngIf="blogData">
         <div class="row border-bottom p-3">
-            <div class="col-lg-9">
-                <h1 nz-typography class="fs-2 blog__name">{{blogData.name}}</h1>
+            <div class="col-lg-8 ms-auto">
+                <h1 nz-typography class="blog__name">
+                    {{blogData.name}}
+                    <ng-container *ngIf="userData && userData.base_user?.id == blogData.author_info.author_id">
+                        <span nz-icon nzType="edit" nzTheme="outline" [routerLink]="'edit'" class="ms-1 mt-1"></span>
+                    </ng-container>
+                </h1>
+
                 <span class="fs-6 cs__text-2 ms-auto">by
                     <nz-avatar nzIcon="user" nzSize="small" nzSrc="{{blogData.author_info.avatar}}"></nz-avatar>
                     <strong class="ms-1">{{blogData.author}}</strong>, at {{blogData.created_at |
@@ -10,10 +16,9 @@
                 </span>
                 <h3 nz-typography class="blog__description mt-2 fs-6">{{blogData.description}}</h3>
             </div>
-            <div class="col-lg-3" *ngIf="userInfo$ | async">
-                <ng-container *ngIf="userData && userData.base_user?.id == blogData.author_info.author_id">
-                    <span nz-icon nzType="edit" nzTheme="outline" [routerLink]="'edit'" class="ms-1 mt-1"></span>
-                </ng-container>
+            <div class="col-lg-2 ms-auto" *ngIf="userInfo$ | async">
+                <img nz-image width="100%" style="max-height: 180px; object-fit: contain;"
+                    nzSrc="{{blogData.thumbnail_image_url}}" alt="" />
             </div>
         </div>
         <div class="row mt-3">
