try to fix header

--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -1,9 +1,13 @@
 <div class="navbar navbar-light bg-light navbar-expand-md px-3">
     <a routerLink="/" class="navbar-brand">
         <img src="{{logoUrl}}" alt="" width="40px" height="40px" ezimgfmt="rs rscb1 src ng ngcb1" loading="eager"
-            srcset="" sizes="" importance="high" fetchpriority="high">
+            srcset="" sizes="" importance="high" fetchpriority="high" class="rounded-circle">
     </a>
-    <div class="w-50">
+    <button class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false">
+        <span nz-icon nzType="menu" nzTheme="outline"></span>
+    </button>
+
+    <div class="w-100">
         <nz-input-group [nzSuffix]="suffixIconSearch">
             <input type="text" nz-input placeholder="search something..." [(ngModel)]="target_kw" />
         </nz-input-group>
@@ -13,9 +17,6 @@
         </ng-template>
     </div>
 
-    <button class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false">
-        <span nz-icon nzType="menu" nzTheme="outline"></span>
-    </button>
     <div class="navbar-collapse collapse" id="menu">
         <nz-divider></nz-divider>
         <ul class="navbar-nav ms-auto" style="list-style:none">
