--- a/src/app/page/blog/components/blog-card-mobile/blog-card-mobile.component.html
+++ b/src/app/page/blog/components/blog-card-mobile/blog-card-mobile.component.html
@@ -1,6 +1,15 @@
 <div class="mb_card">
     <nz-divider></nz-divider>
     <div class="container">
+        <div class="row mb-2">
+            <div class="col-12">
+                <ng-container *ngFor="let item of blogHagtag">
+                    <nz-tag>
+                        {{item}}
+                    </nz-tag>
+                </ng-container>
+            </div>
+        </div>
         <div class="row">
             <div class="col-9">
                 <h5 nz-typography [routerLink]="'/blog/'+blogData.id+'-'+blogSlug">{{blogData.name}}</h5>
