--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -27,7 +27,7 @@
             <li nz-menu-item [routerLink]="['/blog/series']" [nzDisabled]="false">Series</li>
           </ul>
         </li>
-        <li nz-submenu nzTitle="Learing" nzIcon="fund" nzOpen="true" [nzDisabled]="false">
+        <li nz-submenu nzTitle="Learning" nzIcon="fund" nzOpen="true" [nzDisabled]="false">
           <ul>
             <li nz-menu-item [routerLink]="['/learn/ask-expert']" [nzDisabled]="true">Ask Expert</li>
             <li nz-menu-item [routerLink]="['/learn/learn-chart']" [nzDisabled]="false">Read Chart</li>
