--- a/src/app/shared/component/chart-pattern-card/chart-pattern-card.component.html
+++ b/src/app/shared/component/chart-pattern-card/chart-pattern-card.component.html
@@ -3,7 +3,7 @@
         <nz-card-meta nzTitle="{{item.name}}" nzDescription="{{item.category}}"></nz-card-meta>
     </nz-card>
     <ng-template #coverTemplate>
-        <picture class="px-3 py-1">
+        <picture class="px-3 py-1" [routerLink]="item.slug" routerLinkActive="router-link-active">
             <source media="(max-width:3650px)" srcset="{{item.chart_imgs[0].imgUrl}}">
             <img src="" width="100%" height="200px" alt="{{item.name}}" style="object-fit: contain;">
         </picture>
