change timezone, fix empty state

--- a/src/app/page/blog/components/blog-reply/blog-reply.component.html
+++ b/src/app/page/blog/components/blog-reply/blog-reply.component.html
@@ -17,7 +17,7 @@
                 by <strong>{{item.author.user}}</strong>
             </span>
             <span>
-                at {{ item.created_at | date: 'short': 'UTC'}}
+                at {{ item.created_at | date: 'short': 'GMT+7'}}
             </span>
         </div>
     </div>
