--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -38,6 +38,10 @@
           <span nz-icon nzType="question-circle" nzTheme="outline"></span>
           <span>About Us</span>
         </li>
+        <li nz-menu-item [routerLink]="['/faq']">
+          <span nz-icon nzType="check-circle" nzTheme="outline"></span>
+          <span>FAQ</span>
+        </li>
       </ul>
       <div class="cs__user-profile">
         <li *ngIf="!isLoggedIn" class="nav-item">
